--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-django==4.1
+django~=4.2.16
 flake8==5.0.4
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
 pep8-naming==0.13.2
 django-debug-toolbar==3.2.4
-djangorestframework==3.13.1
+djangorestframework~=3.15.2
+pip~=23.2.1
+attrs~=23.2.0
+setuptools~=65.5.0
+packaging~=24.1
+platformdirs~=4.2.2
